...
  locked: boolean;
  onLockedPress: () => void;
}>) {
  return (
    <FormBody>
      <LabelNotice />
      <FormField label="Nome da etiqueta" validation={nameValidation}>
        <TextField
          placeholder={namePlaceholder}
          accessibilityLabel="Nome da etiqueta"
          value={name}
          onChangeText={onNameChange}
        />
...
